--- a/example/simple-bot/package.json
+++ b/example/simple-bot/package.json
@@ -12,7 +12,6 @@
 	"license": "ISC",
 	"dependencies": {
 		"discord.js": "^14.11.0",
-		"dotenv": "^16.1.4",
-		"zod": "^3.21.4"
+		"dotenv": "^16.1.4"
 	}
 }
