--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "suger-djs",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"description": "Library for writing discord.js in TypeScript for more fun!",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -11,6 +11,11 @@
 	},
 	"author": "soukun",
 	"license": "MIT",
+	"homepage": "https://github.com/n-soukun/sugar-djs#readme",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/n-soukun/sugar-djs.git"
+	},
 	"dependencies": {
 		"discord.js": "^14.16.3",
 		"zod": "^3.23.8"
