--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "suger-djs",
-	"version": "0.1.2",
+	"name": "sugar-djs",
+	"version": "0.2.1",
 	"description": "Library for writing discord.js in TypeScript for more fun!",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
