--- a/example/simple-bot/package.json
+++ b/example/simple-bot/package.json
@@ -13,5 +13,8 @@
 	"dependencies": {
 		"discord.js": "^14.24.0",
 		"dotenv": "^16.1.4"
+	},
+	"devDependencies": {
+		"typescript": "^5.9.3"
 	}
 }
