--- a/example/simple-bot/package.json
+++ b/example/simple-bot/package.json
@@ -11,7 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"discord.js": "^14.24.0",
+		"discord.js": "14.25.0",
 		"dotenv": "^16.1.4"
 	},
 	"devDependencies": {
